fix fork-me on mobile.
and by fix, i mean remove.

--- a/content/style/responsive.less
+++ b/content/style/responsive.less
@@ -50,6 +50,9 @@ html {
     .border-radius(@4px);
     &:after { display: none; }
   }
+  a.fork-me {
+    display: none;
+  }
   html.item-404 {
     section#main {
       font-size: @12px;
